Fixed form field alignment

--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ main .container{
     margin-top: 80px;
     height: calc(100% - 80px);
     padding: 20px 0px;
+    width: 100%
 }
 
 main .card{
@@ -63,7 +64,8 @@ main .card{
     margin-left: 2%;
     padding: 20px;
     background-color: #fff;
-    border-radius: 20px;
+    border-radius: 15px;
+    box-shadow: 2px 2px 10px #999;
 }
 
 main h1{
@@ -74,7 +76,7 @@ main .input-box-container{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-around;
+    justify-content: flex-start;
 }
 
 main .input-box-container .input-card{
@@ -82,6 +84,7 @@ main .input-box-container .input-card{
     padding: 15px 0px;
     display: flex;
     flex-direction: column;
+    margin: 0px 10px;
 }
 
 main .input-card label{
